# ArthaChain

./: .dockerignore  .gitignore  BEAST_MODE_DEPLOY.sh  COMMUNITY_SETUP_FINAL.md  CONTRIBUTING.md  Cargo.toml  DEVOPS_SETUP_COMPLETE.md  Dockerfile  Dockerfile.prebuilt  GLOBAL_DEPLOYMENT_GUIDE.md  Makefile  NETWORK_MONITORING_IMPLEMENTATION.md  NETWORK_MONITORING_SUCCESS_SUMMARY.md  NODE_SETUP_SIMPLE.md  README-VALIDATOR.md  README.md  ROADMAP.md  TESTNET.md  TESTNET_SETUP_GUIDE.md  __init__.py  adaptive_network.py  akash-deployment-startup.sh  arthachain-node-installer.sh  arthachain.service  byzantine_fix.rs  cloudflare-tunnel-config.yml  cloudflared-config.yml  correct_node_config.toml  decoder.py  docker-compose-simple.yml  docker-compose-single.yml  docker-compose.yml  install-community-node.sh  install-validator.sh  install_deps.sh  launch_testnet.sh  message_flags_test  mock-binary.sh  mock_torch.py  node_config.toml  (+17 more)
blockchain_node/: COMMUNITY_NODE_SETUP.md  Cargo.toml  DEVELOPER_SETUP.md  active_p2p_node.py  arthchain_monitor_dashboard.html  blockchain_metrics  bootstrap_config.toml  build.rs  cloudflare-tunnel-config.yml  community_setup.sh  dashboard_server.py  decentralized_discovery.py  demo_arthachain.sh  deploy_10_nodes.sh  distributed_node_setup.md  fixed.rs  full_api_server.py  launch_testnet.sh  message_flags_test  mod.rs  multi_node_test.sh  node_10_setup.sh  node_1_setup.sh  node_2_setup.sh  node_3_setup.sh  node_4_setup.sh  node_5_setup.sh  node_6_setup.sh  node_7_setup.sh  node_8_setup.sh  node_9_setup.sh  node_config.toml  nohup.out  p2p_bootstrap.toml  quick_node_setup.sh  run_real_arthachain.sh  simple_p2p_server.py  stop_arthachain.sh  stop_multi_node_test.sh  stop_testnet.sh  (+8 more)
blockchain_node/benches/: data_chunking_benchmark.rs  performance.rs
blockchain_node/comprehensive_api_test_results_20250820_002259/: 1_fully_working.md  2_working_with_mock.md  3_not_working.md  4_working_with_errors.md
blockchain_node/docs/: DEPLOYMENT.md  SECURITY.md  quantum_cross_shard.md  quantum_svbft.md  upgrade_patterns.md
blockchain_node/examples/: blockchain_wasm_example.rs  cross_shard_tx_example.rs  data_chunking_test.rs  diamond_proxy_example.rs  dos_protection_benchmark.rs  fault_tolerance_test.rs  full_system_benchmark.rs  hybrid_storage_demo.rs  memmap_storage_example.rs  network_benchmark.rs  quantum_svbft_example.rs  real_world_simulation.rs  sustainability_test.rs  transaction_execution_example.rs  uups_proxy_example.rs
blockchain_node/fuzz/: Cargo.toml
blockchain_node/fuzz/fuzz_targets/: data_chunking.rs
blockchain_node/models/security/: README.md  model_config.json  security_model.onnx
blockchain_node/scripts/: blockchain_metrics.rs  run_stress_test.sh  stress_test.rs  test_tps  test_tps.rs
blockchain_node/src/: blockchain.rs  gas_optimization.rs  lib.rs  main.rs  message_flags_test.rs  node.rs  smart_contract_engine.rs  types.rs
blockchain_node/src/ai_engine/: advanced_detection.rs  data_chunking.rs  data_chunking_tests.rs  device_health.rs  explainability.rs  fraud_detection.rs  mod.rs  neural_network.rs  performance_monitor.rs  security.rs  user_identification.rs
blockchain_node/src/api/: blockchain_api.rs  faucet.rs  fraud_monitoring.rs  metrics.rs  mod.rs  recovery_api.rs  routes.rs  rpc.rs  server.rs  testnet_router.rs  transaction.rs  wallet_integration.rs  websocket.rs
blockchain_node/src/bridges/: bitcoin.rs  cosmos.rs  ethereum.rs  mod.rs  polkadot.rs
blockchain_node/src/common/: error.rs  hash.rs  mod.rs
blockchain_node/src/config/: mod.rs  performance_monitoring.rs
blockchain_node/src/consensus/: adaptive.rs  advanced_detection.rs  anomaly_detection.rs  batch.rs  batch_validation.rs  block_manager.rs  byzantine.rs  byzantine.rs.backup  byzantine.rs.bak  byzantine.rs.fixed  byzantine.rs.new  checkpoint.rs  consensus_manager.rs  cross_shard.rs  dag.rs  difficulty.rs  fraud_detection.rs  incentives.rs  leader_election.rs  leader_failover.rs  load_balancer.rs  ltl.rs  metrics.rs  mod.rs  parallel_processor.rs  parallel_tx.rs  petri_net.rs  proofs.rs  quantum_svbft.rs  receipt.rs  recovery.rs  reputation.rs  secure_parallel_tx.rs  security.rs  sharding.rs  social_graph.rs  state_pruning.rs  svbft.rs  svcp.rs  types.rs  (+7 more)
blockchain_node/src/contracts/: gas_optimizer.rs  mod.rs
blockchain_node/src/crypto/: arkworks_zkp.rs  hash.rs  keys.rs  mod.rs  signature.rs  zkp.rs
blockchain_node/src/deployment/: mod.rs  production_infrastructure.rs
blockchain_node/src/evm/: README.md  advanced_gas_metering.rs  backend.rs  execution_engine.rs  executor.rs  mod.rs  opcodes.rs  precompiled.rs  precompiles.rs  rpc.rs  runtime.rs  types.rs
blockchain_node/src/execution/: arthacoin_executor.rs  executor.rs  mod.rs  parallel.rs  transaction_engine.rs
blockchain_node/src/gas_free/: mod.rs
blockchain_node/src/identity/: mod.rs
blockchain_node/src/ledger/: block.rs  mod.rs  pruning.rs  state_backup.rs  transaction.rs
blockchain_node/tests/: block_tests.rs  complete_system_validation.rs  consensus_tests.rs  core_tests.rs  cross_shard_integration_test.rs  data_chunking_integration_tests.rs  phase1_core_validation.rs  phase1_performance_validation.rs  phase1_validation.rs  phase2_complete_summary.rs  phase2_core_completion.rs  phase2_evm_basic_compatibility.rs  phase2_evm_compatibility_complete.rs  phase2_evm_simple_demo.rs  phase2_execution_layer_validation.rs  phase2_gas_optimization_demo.rs  phase3_advanced_security_monitoring.rs  phase3_complete_all_phases.rs  phase3_security_working_demo.rs  phase5_comprehensive_testing_suite.rs  test_contract.wasm  test_contract.wat  view_change_integration_test.rs
sdk/rust/: Cargo.toml
svdb-python/: README.md  pyproject.toml
svdb-python/examples/: svdb_cli.py
telegram_faucet_bot/: BOT_DEMO.md  Cargo.toml  README.md  SETUP.md  env.example  test_bot.sh
telegram_faucet_bot/src/: faucet_client.rs  main.rs  rate_limiter.rs  wallet_validator.rs
tools/contract-cli/: Cargo.toml
workspace-test/: Cargo.toml
workspace-test/src/: lib.rs
workspace-test/tests/: cross_shard_tests.rs
(+811 files in other folders)
