[workspace]
members = [
    "blockchain_node",
    "blockchain_node/fuzz",
    "workspace-test"
]

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
libp2p = { version = "0.52", features = ["tokio", "tcp", "dns", "websocket", "noise", "yamux", "ping", "identify", "kad", "floodsub", "mdns", "macros", "request-response", "metrics"] }
hex = "0.4"
sha2 = "0.10"
blake2 = "0.10"
sha3 = "0.10"
blake3 = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
zstd = "0.12.3"
prometheus = "0.13"
axum = "0.7"
tower-http = { version = "0.5.0", features = ["cors"] }
thiserror = "1.0"
rayon = "1.8"
sysinfo = "0.30.0"
petgraph = "0.6"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
bumpalo = "3.14.0"
dashmap = "5.5.3"
parking_lot = "0.12.1"
socket2 = "0.5.5"
bincode = "1.3.3"
is-terminal = "0.4.12"
web-time = "0.2.4"

# Secure version dependencies
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
idna = "1.0.3"
libsecp256k1 = "0.7.1"
prost-types = "0.12.3"
protobuf = "3.7.2"
ring = "0.17.14"
rustls = "0.22.4"
webpki = "0.22.4"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance blockchain implementation"

[workspace.metadata]
default-members = ["blockchain_node"]

[package]
name = "arthachain_node"
version = "0.1.0"
edition = "2021"
description = "ArthaChain node implementation - Hybrid Consensus Blockchain with Social Verification"
authors = ["ArthaChain Team <info@arthchain.com>"]
homepage = "https://arthchain.com"
repository = "https://github.com/DiigooSai/ArthaChain"
license = "MIT"

# Simplified dependencies for standalone benchmarks
[dependencies]
tokio = "1.36.0"
rand = "0.8"
rayon = "1.8"
blake3 = "1.5.0"
num_cpus = "1.16.0"
blockchain_node = { path = "blockchain_node" }
parking_lot = "0.12.1"
async-trait = "0.1.77"

[[bench]]
name = "simple_throughput_test"
harness = false
path = "benches/simple_throughput_test.rs"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
rayon = "1.8.0"
proptest = "1.2"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }
async-trait = "0.1.77"

[[bench]]
name = "data_chunking_benchmark"
harness = false
path = "benches/data_chunking_benchmark.rs"

[[bench]]
name = "performance"
harness = false
path = "benches/performance.rs"

[[bin]]
name = "ultra_high_tps_test"
path = "standalone_benchmarks/ultra_high_tps_test.rs"

[features]
skip_problematic_modules = ["blockchain_node/skip_problematic_modules"]
skip_tests = ["blockchain_node/skip_tests"]
sysinfo = ["blockchain_node/sysinfo"] 