[workspace]
members = [
    "blockchain_node",
    "blockchain_node/fuzz",
    "workspace-test"
]

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
libp2p = { version = "0.52", features = ["tokio", "tcp", "dns", "websocket", "noise", "yamux", "ping", "identify", "kad", "floodsub", "mdns", "macros", "request-response", "metrics"] }
hex = "0.4"
sha2 = "0.10"
blake2 = "0.10"
sha3 = "0.10"
blake3 = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
zstd = "0.12.3"
prometheus = "0.13"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5.0", features = ["cors"] }
thiserror = "1.0"
rayon = "1.8"
sysinfo = "0.30.0"
petgraph = "0.6"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
bumpalo = "3.14.0"
dashmap = "5.5.3"
parking_lot = "0.12.1"
socket2 = "0.5.5"
bincode = "1.3.3"
is-terminal = "0.4.12"
web-time = "0.2.4"

# Secure version dependencies
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
idna = "1.0.3"
libsecp256k1 = "0.7.1"
prost-types = "0.12.3"
protobuf = "3.7.2"
ring = "0.17.14"
rustls = "0.22.4"
webpki = "0.22.4"
argon2 = "0.5.2"
async-trait = "0.1.77"
blake2b_simd = "1.0.3"
flate2 = "1.0"
downcast-rs = "1.2.0"
memmap2 = "0.9.5"
lz4_flex = "0.9.2"
brotli = "3.3.4"
crossbeam = "0.8.2"
tokio-util = { version = "0.7.8", features = ["codec"] }
bytes = "1.4"
metrics = "0.18.0"
metrics-exporter-prometheus = "0.9.0"
prometheus-client = "0.23.1"
num_cpus = "1.16.0"
serde_with = "3.4"
serde_repr = "0.1"
serde_yaml = "0.9.25"
rand = "0.8"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
base64 = "0.21.5"
multibase = "0.9.1"
bip39 = "2.0.0"
secp256k1 = { version = "0.28.0", features = ["recovery"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hmac = "0.12.1"
reqwest = { version = "0.11.23", features = ["json","rustls-tls"], default-features = false }
warp = "0.3.6"
rupnp = "3.0.0"
bitflags = "2.4.0"
tower = { version = "0.4.13", features = ["util"] }
tokio-tungstenite = "0.21"
tokio-stream = { version = "0.1.14", features = ["sync"] }
ort = "2.0.0-rc.9"
ndarray = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = "0.3"
evm-runtime = { version = "0.42.0" }
ethereum = { version = "0.14.0" }
ethereum-types = { version = "0.14.1" }
rlp = "0.5.2"
ethers-core = "2.0.10"
ethabi = "18.0.0"
primitive-types = "0.12.1"
wasmparser = { version = "0.116.1" }
wasm-bindgen = "0.2.89"
wat = "1.0.71"
once_cell = "1.18.0"
arrayref = "0.3.7"
byteorder = "1.5"
k256 = "0.13"
elliptic-curve = "0.13"
pairing = "0.23"
ripemd = "0.1"
num-bigint = "0.4"
num-traits = "0.2"
clap = { version = "4.4", features = ["derive","env"] }
pyo3 = { version = "0.24.1", features = ["extension-module","auto-initialize","abi3"] }
numpy = { version = "0.24", features = ["half"] }
sys-info = "0.9.1"
paste = "1.0.15"
proc-macro-error = "1.0.4"
instant = "0.1.12"
mach = "0.3.2"
trust-dns-proto = { version = "0.23.2" }
trust-dns-resolver = { version = "0.23.2" }
atty = { package = "is-terminal", version = "0.4.12" }

# Optional BLS library
blst = "0.3.11"

# Updated rocksdb feature
# rocksdb = { version = "0.18.0", default-features = false, features = ["snappy","zlib","bzip2","lz4"] } 

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance blockchain implementation"

[workspace.metadata]
default-members = ["blockchain_node"]

[package]
name = "arthachain_node"
version = "0.1.0"
edition = "2021"
description = "ArthaChain node implementation - Hybrid Consensus Blockchain with Social Verification"
authors = ["ArthaChain Team <info@arthchain.com>"]
homepage = "https://arthchain.com"
repository = "https://github.com/DiigooSai/ArthaChain"
license = "MIT"

# Simplified dependencies for standalone benchmarks
[dependencies]
tokio = "1.36.0"
rand = "0.8"
rayon = "1.8"
blake3 = "1.5.0"
num_cpus = "1.16.0"
blockchain_node = { path = "blockchain_node" }
parking_lot = "0.12.1"
async-trait = "0.1.77"

[[bench]]
name = "simple_throughput_test"
harness = false
path = "benches/simple_throughput_test.rs"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
rayon = "1.8.0"
proptest = "1.2"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }
async-trait = "0.1.77"

[[bench]]
name = "data_chunking_benchmark"
harness = false
path = "benches/data_chunking_benchmark.rs"

[[bench]]
name = "performance"
harness = false
path = "benches/performance.rs"

[[bin]]
name = "ultra_high_tps_test"
path = "standalone_benchmarks/ultra_high_tps_test.rs"

[features]
skip_problematic_modules = ["blockchain_node/skip_problematic_modules"]
skip_tests = ["blockchain_node/skip_tests"]
sysinfo = ["blockchain_node/sysinfo"]

# Updated rocksdb feature
# rocksdb = { version = "0.18.0", default-features = false, features = ["snappy","zlib","bzip2","lz4"] } 