[package]
name = "blockchain_node"
version = "0.1.0"
edition = "2021"

[lib]
name = "blockchain_node"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

# Examples
[[example]]
name = "hybrid_storage_demo"
path = "examples/hybrid_storage_demo.rs"

[[example]]
name = "dos_protection_benchmark"
path = "examples/dos_protection_benchmark.rs"

[[example]]
name = "data_chunking_test"
path = "examples/data_chunking_test.rs"

[[example]]
name = "full_system_benchmark"
path = "examples/full_system_benchmark.rs"

# Features configuration
[features]
default = ["crypto"]
crypto = ["bls"]
bls = ["blst", "threshold_crypto"]
evm = ["evm-runtime"]
native = []
wasm = ["wasmparser"]
skip_tests = [] # Feature to skip problematic test modules
skip_problematic_modules = [] # Feature to skip problematic implementation modules
sysinfo = [] # Feature for system information monitoring

# Dependencies
[dependencies]
# Core dependencies
tokio = { version = "1.36.0", features = ["full", "macros"] }
anyhow = "1.0.75"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
async-trait = "0.1"
rocksdb = "0.20"
blake2b_simd = "1.0"
blake3 = "1.5.0"
blake2 = "0.10"
sha3 = "0.10"
hex = "0.4.3"
flate2 = "1.0"  # For compression support
downcast-rs = "1.2.0"
memmap2 = "0.9.0"  # Memory mapping support
lz4_flex = "0.11.1"  # LZ4 compression
zstd = "0.12.3"  # Zstandard compression
brotli = "3.4.0"  # Brotli compression
socket2 = "0.5.5"  # Replaced net2 with socket2
crossbeam = { version = "0.8.2", features = ["crossbeam-channel", "crossbeam-deque"] }  # Concurrency primitives
libp2p = { version = "0.52", features = [
    "tokio",
    "tcp",
    "dns",
    "websocket",
    "noise",
    "yamux",
    "ping",
    "identify",
    "kad",
    "floodsub",
    "mdns",
    "macros",
    "request-response",
    "metrics"
] }  # Updated to 0.52
parking_lot = "0.12.1"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }
floodsub = "0.27.0"

# Metrics and observability
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
prometheus = "0.13"
prometheus-client = "0.19"
num_cpus = "1.16.0"

# Serialization
serde_with = "3.0"
serde_repr = "0.1"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }  # Updated from 1.x to 2.x
rand = "0.8"
rand_core = "0.6.4"
sha2 = "0.10"
base64 = "0.21.5"
argon2 = "0.5.2"
multibase = "0.9.1"
bip39 = "2.0.0"
secp256k1 = { version = "0.28.0", features = ["recovery"] }  # Updated from 0.24.0
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# BLS signature libraries (optional)
blst = { version = "0.3.11", optional = true }  # Updated
threshold_crypto = { version = "0.4", optional = true }

# Network
reqwest = { version = "0.11.23", features = ["json"] }  # Updated
warp = "0.3.6"  # Updated
juniper = "0.15.12"  # Updated

# Data structures
dashmap = "5.5.3"
bumpalo = "3.14.0"
bitflags = "2.4.0"

# REST API
tower = { version = "0.4.13", features = ["util"] }
tokio-tungstenite = "0.20.1"
tokio-stream = { version = "0.1.14", features = ["sync"] }

# AI-related
ort = "1.14.7"  # ONNX Runtime
ndarray = "0.15.6"
tract-onnx = "0.21.1"  # Updated from 0.19.11

# Sharding and consensus
bincode = "1.3.3"

# Metrics and observability
tracing = "0.1.37"
tracing-subscriber = "0.3"

# EVM support (optional, enabled with feature flag)
sputnikvm = { version = "0.11.0-beta.0", optional = true }
evm-runtime = { version = "0.42.0", optional = true }  # Updated from 0.26.2
ethereum = { version = "0.14.0", optional = true }
ethereum-types = "0.14.1"
rlp = "0.5.2"
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
ethers-core = "2.0.10"
ethabi = "18.0.0"
primitive-types = "0.12.1"

# WASM runtime (optional, enabled with feature flag)
wasmparser = { version = "0.116.1", optional = true }
wasm-bindgen = "0.2.87"
wat = "1.0.71"

# Additional dependencies for WASM host functions
once_cell = "1.18.0"
arrayref = "0.3.7"
byteorder = "1.4.3"

# Cryptographic operations
k256 = "0.13"
elliptic-curve = "0.13"
pairing = "0.23"
ripemd = "0.1"
num-bigint = "0.4"
num-traits = "0.2"

# Optional dependencies
# z3 = { version = "0.11", optional = true }  # Temporarily disabled
rayon = "1.8"

clap = { version = "4.4", features = ["derive", "env"] }

tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
pyo3 = { version = "0.21.0", features = ["extension-module", "auto-initialize", "abi3"] }  # Updated
numpy = { version = "0.21.0", features = ["half"] }  # Updated

# System monitoring
sysinfo = "0.30.0"

# Replace unmaintained crates
is-terminal = "0.4.12"  # Replacement for atty
web-time = "0.2.4"  # Replacement for instant

[dev-dependencies]
tempfile = "3.8.0"
criterion = { version = "0.4", features = ["html_reports"] }
mockall = "0.11.4"
tokio-test = "0.4"

[[bench]]
name = "data_chunking_benchmark"
harness = false 

# Integration tests - moved from root Cargo.toml
[[test]]
name = "high_throughput_tests"
path = "src/tests/high_throughput_tests.rs"
required-features = ["!skip_tests"]

[[test]]
name = "memmap_storage_tests"
path = "src/tests/memmap_storage_tests.rs"
required-features = ["!skip_tests"]

[[test]]
name = "network_throughput_tests"
path = "src/tests/network_throughput_tests.rs"
required-features = ["!skip_tests"]

[[test]]
name = "cross_shard_tests"
path = "src/tests/cross_shard_tests.rs"
required-features = ["!skip_tests"]

[[test]]
name = "simd_execution_tests"
path = "src/tests/simd_execution_tests.rs"
required-features = ["!skip_tests"]

[[test]]
name = "zkp_benchmark_tests"
path = "src/tests/zkp_benchmark_tests.rs"
required-features = ["!skip_tests"]

[[test]]
name = "integration_tests"
path = "src/tests/integration_tests.rs"
required-features = ["!skip_tests"] 
