[package]
name = "blockchain_node"
version = "0.1.0"
edition = "2021"

[lib]
name = "blockchain_node"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

# Examples
[[example]]
name = "hybrid_storage_demo"
path = "examples/hybrid_storage_demo.rs"

[[example]]
name = "dos_protection_benchmark"
path = "examples/dos_protection_benchmark.rs"

[[example]]
name = "data_chunking_test"
path = "examples/data_chunking_test.rs"

[[example]]
name = "full_system_benchmark"
path = "examples/full_system_benchmark.rs"

[[example]]
name = "blockchain_wasm_example"
path = "examples/blockchain_wasm_example.rs"

# Features configuration
[features]
default = ["crypto"]
crypto = ["bls"]
bls = ["blst"]
evm = ["evm-runtime"]
native = []
wasm = ["wasmparser"]
skip_tests = [] # Feature to skip problematic test modules
skip_problematic_modules = [] # Feature to skip problematic implementation modules
sysinfo = [] # Feature for system information monitoring

# Dependencies
[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
rocksdb = { version = "0.18.0", default-features = false, features = ["snappy","zlib","bzip2","lz4"] }
blake2b_simd = { workspace = true }
blake3 = { workspace = true }
blake2 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
flate2 = { workspace = true }
downcast-rs = { workspace = true }
memmap2 = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }
brotli = { workspace = true }
socket2 = { workspace = true }
crossbeam = { workspace = true }
libp2p = { version = "0.53", default-features = false, features = [
    "tokio",
    "tcp",
    "yamux",
    "noise",
    "floodsub",
    "kad",
    "ping",
    "identify",
    "request-response",
    "metrics",
    "macros",
    "tls"
] }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }

# Metrics and observability
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
prometheus = { workspace = true }
prometheus-client = { workspace = true }
num_cpus = { workspace = true }

# Serialization
serde_with = { workspace = true }
serde_repr = { workspace = true }
serde_yaml = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
libsecp256k1 = { workspace = true }
ring = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }
multibase = { workspace = true }
bip39 = { workspace = true }
secp256k1 = { workspace = true }
tiny-keccak = { workspace = true }
hmac = { workspace = true }

# Network
reqwest = { workspace = true }
warp = { workspace = true }
rupnp = { workspace = true }

# Data structures
dashmap = { workspace = true }
bumpalo = { workspace = true }
bitflags = { workspace = true }

# REST API
tower = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }

# AI-related
ort = { workspace = true }
ndarray = { workspace = true }

# Sharding and consensus
bincode = { workspace = true }

# Metrics and observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# EVM support (optional)
evm-runtime = { workspace = true, optional = true }
ethereum = { workspace = true, optional = true }
ethereum-types = { workspace = true }
rlp = { workspace = true }
ethers-core = { workspace = true }
ethabi = { workspace = true }
primitive-types = { workspace = true }

# WASM runtime (optional)
wasmparser = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
wat = { workspace = true }

# Additional dependencies
once_cell = { workspace = true }
arrayref = { workspace = true }
byteorder = { workspace = true }

# Cryptographic operations
k256 = { workspace = true }
elliptic-curve = { workspace = true }
pairing = { workspace = true }
ripemd = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }

# Optional dependencies
rayon = { workspace = true }

clap = { workspace = true }

tower-http = { workspace = true }
uuid = { workspace = true }
pyo3 = { version = "0.24.1", features = ["extension-module", "auto-initialize", "abi3"] }
numpy = { version = "0.24", features = ["half"] }

# System monitoring
sysinfo = { workspace = true }
sys-info = { workspace = true }

# Replace unmaintained crates
atty = { workspace = true }
web-time = { workspace = true }

# Update other dependencies to use newer versions
idna = { workspace = true }
prost-types = { workspace = true }
protobuf = { workspace = true }
paste = { workspace = true }
proc-macro-error = { workspace = true }
instant = { workspace = true }
mach = { workspace = true }
trust-dns-proto = { version = "0.23.2" }
trust-dns-resolver = { version = "0.23.2" }

# BLS signature libraries (optional)
blst = { workspace = true, optional = true }

threshold_crypto = "0.4.0"

[dev-dependencies]
tempfile = "3.9"
criterion = { version = "0.5", features = ["html_reports"], default-features = false }
mockall = "0.12"
tokio-test = "0.4"

[[bench]]
name = "data_chunking_benchmark"
harness = false

