[package]
name = "arthachain_node"
version = "0.1.0"
edition = "2021"
authors = ["ArthaChain Team <team@arthachain.io>"]
description = "Next-generation blockchain node with AI-native features, quantum resistance, and ultra-high performance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arthachain/arthachain"
homepage = "https://arthachain.com"
keywords = ["blockchain", "ai", "quantum-resistant", "consensus", "smart-contracts"]
categories = ["cryptography", "network-programming", "database", "algorithms"]

[lib]
name = "arthachain_node"
path = "src/lib.rs"

[[bin]]
name = "arthachain"
path = "src/main.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[[bin]]
name = "contract_verifier"
path = "src/bin/contract_verifier.rs"

[[bin]]
name = "real_time_api_server"
path = "src/bin/real_time_api_server.rs"

[[bin]]
name = "testnet_api_server"
path = "src/bin/testnet_api_server.rs"

[dependencies]
# Async and runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }



# Networking
libp2p = { workspace = true }
hickory-resolver = { workspace = true }

# Storage
rocksdb = { workspace = true }

# Cryptography and security
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake2 = { workspace = true }
blake3 = { workspace = true }
ring = { workspace = true }
aes-gcm = { workspace = true }
hmac = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
secp256k1 = { workspace = true }
bulletproofs = { workspace = true }
merlin = { workspace = true }
curve25519-dalek = { workspace = true }
arrayref = { workspace = true }

# Compression
brotli = { workspace = true }
lz4_flex = { workspace = true }
flate2 = { workspace = true }
zstd = "0.13.2"

# Math and utilities
num-bigint = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
byteorder = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
bumpalo = { workspace = true }
sysinfo = { workspace = true }
tiny-keccak = { workspace = true }
lazy_static = { workspace = true }
socket2 = { workspace = true }
memmap2 = { workspace = true }

# Machine Learning and AI
candle-core = { workspace = true }
candle-nn = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
statrs = { workspace = true }
smartcore = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# WASM Runtime
wasmtime = { workspace = true }
wasmparser = "0.218.0"
wasm-smith = "0.218.0"
# wat will be resolved by wasmtime dependency
# wasmer = "4.3.7"  # Removed due to wat version conflict with wasmtime
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
serde-wasm-bindgen = "0.6.5"
# z3 = "0.12.0"  # Commented out - requires system Z3 installation

# EVM Runtime
ethereum-types = { workspace = true }
evm-runtime = "0.43.0"

# BLS signatures and pairing
blst = "0.3.11"
pairing = "0.23.0"

# Additional cryptography
ripemd = "0.1.3"
k256 = "0.13.3"
elliptic-curve = "0.13.8"
num-traits = "0.2.19"

# Async trait support
async-trait = "0.1.80"

# JSON-RPC
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"

# Metrics and monitoring
prometheus = { workspace = true }

# Python integration for AI - enable abi3 to avoid linking to system libpython at build time
pyo3 = { version = "0.24.1", features = ["abi3-py310"], optional = true }

# Additional required dependencies
hex = "0.4.3"
config = "0.14.0"
toml = "0.8.19"
crossbeam = "0.8.4"
parking_lot = "0.12.3"
dashmap = "6.1.0"
once_cell = "1.20.2"
tokio-tungstenite = "0.21"
futures-util = "0.3"
regex = "1.11.1"
tempfile = "3.13.0"
clap = { version = "4.5.0", features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3.13.0"

[features]
default = ["full"]
full = ["ai-engine", "quantum-resistance", "wasm-runtime", "evm-runtime", "cross-shard", "biometrics"]
ai-engine = []
python-ai = ["pyo3"]
quantum-resistance = []
wasm-runtime = []
evm-runtime = []
cross-shard = []
biometrics = []
benchmark = []
sysinfo = []
bls = []
evm = ["evm-runtime"]
wasm = ["wasm-runtime"]

