[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "svdb"
version = "0.1.0"
description = "Python bindings for the State Variable Database (SVDB)"
authors = [
    {name = "ArthaChain Team", email = "info@arthachain.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[tool.maturin]
features = ["python-bindings"]
module-name = "svdb._svdb"
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"] 