[package]
name = "arthachain_telegram_bot"
version = "0.1.0"
edition = "2021"
description = "ArthaChain Telegram Faucet Bot - Request ARTHA tokens easily via Telegram"

[workspace]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
teloxide = { version = "0.12", features = ["macros", "webhooks"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.0"
thiserror = "1.0"

[[bin]]
name = "arthachain_faucet_bot"
path = "src/main.rs"