[package]
name = "workspace-test"
version = "0.1.0"
edition = "2021"

[dependencies]
blockchain_node = { path = "../blockchain_node" }
tokio = { version = "1.36.0", features = ["full", "macros"] }
anyhow = "1.0.75"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4" 