[package]
name = "contract-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for deploying and interacting with WASM contracts"
authors = ["Blockchain Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
blake3 = "1.5"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
dotenv = "0.15"
home = "0.5"
wabt = "0.10"
wat = "1.0" 